@@ -1,5 +1,14 @@
 2008-05-14  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>
 
+	Made string literals for torrent file processing static const
+	std::string.
+	* src/BtContext.cc
+	* src/BtContext.h
+	* src/DefaultBtContext.cc
+	* src/DefaultBtContext.h
+
+2008-05-14  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>
+
 	Made string literal for tracker response static const std::string
 	* src/BtAnnounce.cc
 	* src/BtAnnounce.h
